# src/main/resources/openapi/ozzu_api.yaml
@@ -1810,7 +1810,7 @@ components:
         wagerCards:
           type: array
           minItems: 1
-          maxItems: 5
+          maxItems: 6
           items:
             $ref: "#/components/schemas/WagerCreateCardRequest"
         internalProperties:
@@ -1818,6 +1818,22 @@ components:
     EventStatus:
       type: string
       enum: [ SCHEDULED, LIVE, COMPLETED, CANCELED ]
+
+    WagerEnteredEventLounge:
+      type: object
+      properties:
+        eventLoungeId:
+          $ref: "#/components/schemas/UUID"
+        eventId:
+          $ref: "#/components/schemas/UUID"
+        wagerId:
+          $ref: "#/components/schemas/UUID"
+        loungeId:
+          $ref: "#/components/schemas/UUID"
+        loungeName:
+          type: string
+        timeCreated:
+          $ref: "#/components/schemas/Timestamp"
 
     EventStatusUpdateRequest:
       type: object
@@ -1862,13 +1878,11 @@ components:
       type: object
       required:
         - wagerCardTypeId
-        - bindings
       properties:
         wagerCardTypeId:
           $ref: "#/components/schemas/UUID"
         bindings:
           type: array
-          minItems: 1
           items:
             $ref: "#/components/schemas/WagerCreateCardBindingRequest"
 
@@ -2060,6 +2074,13 @@ components:
           $ref: "#/components/schemas/Timestamp"
         timeUpdated:
           $ref: "#/components/schemas/Timestamp"
+        customizationStatus:
+          type: string
+          enum: [ COMPLETE, INCOMPLETE ]
+        enteredEventLounges:
+          type: array
+          items:
+            $ref: "#/components/schemas/WagerEnteredEventLounge"
         internalProperties:
           $ref: "#/components/schemas/InternalProperties"
 
@@ -2181,6 +2202,9 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/WagerCardBinding"
+        customizationStatus:
+          type: string
+          enum: [ COMPLETE, INCOMPLETE ]
         timeCreated:
           $ref: "#/components/schemas/Timestamp"
         timeUpdated:
